[package]
name = "avr_async_serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ufmt = "0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
embedded-hal-async = "0.2.0-alpha.2"
embedded-io-async = "0.6.0"
avr-device = "0.5.3"
paste = "1.0.14"

[dependencies.atmega-hal]
git = "https://github.com/rahix/avr-hal"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"

[dependencies.avr-hal-generic]
git = "https://github.com/rahix/avr-hal.git"
rev = "190f2c3cb8d29e10f71119352b912369dc5a1fb7"

[features]